# oop-proiect

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  tastatura.txt
.github/actions/clang-tidy/: action.yml
.github/actions/configure-cmake/: action.yml
.github/actions/cppcheck/: action.yml
.github/actions/install-packages/: action.yml
.github/actions/runtime-checks/: action.yml
.github/workflows/: cmake.yml
include/: AbstractTable.h  Entity.h  MYSQLConnection.h  TestTable.h  TestTableEntry.h  test.h
include/CandyCrush/: Candy.h  CandyCrush.h  Constants.h  GUIManager.h  Game.h  GameObject.h  TextureManager.h
include/CandyCrush/enums/: CandyColor.h  CandyType.h  GameState.h
include/CandyCrush/exceptions/: IMGInitException.h  SDLInitException.h  TTFInitException.h
scripts/: run_cppcheck.sh
src/: AbstractTable.cpp  Entity.cpp  MYSQLConnection.cpp  TestTable.cpp  TestTableEntry.cpp  main.cpp  test.cpp
src/CandyCrush/: Candy.cpp  CandyCrush.cpp  GUIManager.cpp  Game.cpp  GameObject.cpp  TextureManager.cpp
src/CandyCrush/exceptions/: IMGInitException.cpp  SDLInitException.cpp  TTFInitException.cpp
